	rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Arbitron' report to use spreadsheet
	rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Programs by City/State', 'Programs by DMA Market'
	and 'Programs by MSA Market' reports to use the spreadsheet
	rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Missing Affidavit Contacts' report to use the
	spreadsheet rendering library.
2014-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'davit/preview.cpp' to place the exception section
	of affidavits on a separate page.
2014-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'davit/edit_airing.cpp' and 'davit/list_airings.cpp'
	to allow air times to end at midnight.
2014-12-23 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'RadioAmerica Affiliates' report to use the
	spreadsheet rendering library.
2014-12-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'Added Programs' report where the date
	range parameters were ignored.
2014-12-23 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SpreadObject::defaultFont()', 'SpreadObject::setDefaultFont()'
	and 'SpreadObject::fontMetrics()' methods in 'lib/spread_object.cpp'
	and 'lib/spread_object.h'.
	* Converted reports to use default font.
2014-12-23 Fred Gleason <fredg@paravelsystems.com>
	* Refactored reports to use common 'SpreadSheet' object.
2014-12-23 Fred Gleason <fredg@paravelsystems.com>
	* Added support for 'DAVIT_REPORT_FORMAT', 'DAVIT_REPORT_FONT_FACE',
	'DAVIT_REPORT_FONT_SIZE' and 'DAVIT_REPORT_FONT_WEIGHT' environmental
	variables.
2015-01-05 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'Affiliates/admin Contacts by Program' report.
2015-01-05 Fred Gleason <fredg@paravelsystems.com>
	* Renamed 'SpreadObject' base class to 'Spread'.
	* Added a 'Spread::fileExtension()' method in 'lib/spread.cpp'
	and 'lib/spread.h'.