@@ -300,115 +300,6 @@ FILE *ListReports::GetTempFile(QString *filename)
 }
 
 
-QString ListReports::GetEmailContactList(int affiliate_id,bool affidavit,
-					 bool progdir)
-{
-  QString ret;
-  QString sql;
-  QSqlQuery *q;
-
-  sql=QString().sprintf("select NAME,EMAIL from CONTACTS \
-                         where (AFFILIATE_ID=%d)",
-			affiliate_id);
-  if(affidavit) {
-    sql+="&&(AFFIDAVIT=\"Y\")";
-  }
-  if(progdir) {
-    sql+="&&(PROGRAM_DIRECTOR=\"Y\")";
-  }
-  q=new QSqlQuery(sql);
-  if(q->size()<1) {
-    ret="[unknown]";
-  }
-  else {
-    while(q->next()) {
-      if(DvtIsEmailAddress(q->value(1).toString())) {
-	ret+=DvtFormatEmailAddress(q->value(0).toString(),
-				   q->value(1).toString())+", ";
-      }
-      else {
-	if(q->value(1).toString().stripWhiteSpace().isEmpty()) {
-	  ret+="[unknown], ";
-	}
-	else {
-	  ret+="[invalid], ";
-	}
-      }	
-    }
-    ret=ret.left(ret.length()-2);
-  }
-  delete q;
-
-  return ret;
-}
-
-
-QString ListReports::GetNameContactList(int affiliate_id,bool affidavit,
-					bool progdir)
-{
-  QString ret;
-  QString sql;
-  QSqlQuery *q;
-
-  sql=QString().sprintf("select NAME from CONTACTS where (AFFILIATE_ID=%d)",
-			affiliate_id);
-  if(affidavit) {
-    sql+="&&(AFFIDAVIT=\"Y\")";
-  }
-  if(progdir) {
-    sql+="&&(PROGRAM_DIRECTOR=\"Y\")";
-  }
-  q=new QSqlQuery(sql);
-  if(q->size()<1) {
-    ret="[unknown]";
-  }
-  else {
-    while(q->next()) {
-      if(!q->value(0).toString().isEmpty()) {
-	ret+=q->value(0).toString()+", ";
-      }
-    }
-    ret=ret.left(ret.length()-2);
-  }
-  delete q;
-
-  return ret;
-}
-
-
-QString ListReports::GetPhoneNumberContactList(int affiliate_id,bool affidavit,
-					       bool progdir)
-{
-  QString ret;
-  QString sql;
-  QSqlQuery *q;
-
-  sql=QString().sprintf("select PHONE from CONTACTS where (AFFILIATE_ID=%d)",
-			affiliate_id);
-  if(affidavit) {
-    sql+="&&(AFFIDAVIT=\"Y\")";
-  }
-  if(progdir) {
-    sql+="&&(PROGRAM_DIRECTOR=\"Y\")";
-  }
-  q=new QSqlQuery(sql);
-  if(q->size()<1) {
-    //    ret="[unknown]";
-  }
-  else {
-    while(q->next()) {
-      if(!q->value(0).toString().isEmpty()) {
-	ret+=PhoneString(q->value(0).toString())+", ";
-      }
-    }
-    ret=ret.left(ret.length()-2);
-  }
-  delete q;
-
-  return ret;
-}
-
-
 QString ListReports::GetTempDir()
 {
 #ifdef WIN32
@@ -445,148 +336,6 @@ void ListReports::ForkViewer(const QString &filename,const QString &data)
     QMessageBox::warning(this,"Davit - "+tr("Error"),
 			 tr("Unable to launch report viewer!"));
   }
-}
-
-
-QString ListReports::StringField(const QVariant &v)
-{
-  if(v.isNull()) {
-    return QString("\"[none]\",");
-  }
-  if(v.toString().isEmpty()) {
-    return QString("\"[none]\",");
-  }
-  return QString("\"")+v.toString()+QString("\",");
-}
-
-
-QString ListReports::PhoneField(const QVariant &v)
-{
-  if(v.isNull()) {
-    return QString("\"[none]\",");
-  }
-  if(v.toString().isEmpty()) {
-    return QString("\"[none]\",");
-  }
-  return QString("\"")+PhoneString(v.toString())+QString("\",");
-}
-
-
-QString ListReports::PhoneString(const QString &pnum)
-{
-  QString ret=pnum.stripWhiteSpace();
-  if(ret.length()==10) {
-    return QString("(")+ret.left(3)+QString(") ")+
-      ret.mid(3,3)+QString("-")+ret.right(4);
-  }
-  return ret;
-}
-
-
-QString ListReports::AddressField(const QVariant &v1,const QVariant &v2)
-{
-  QString addr1=v1.toString();
-  QString addr2=v2.toString();
-  if(addr1.isEmpty()&&addr2.isEmpty()) {
-    return QString("\"[none]\",");
-  }
-  QString ret="\""+addr1;
-  if((!addr1.isEmpty())&&(!addr2.isEmpty())) {
-    ret+=", ";
-  }
-  ret+=addr2+"\",";
-
-  return ret;
-}
-
-
-QString ListReports::FrequencyField(const QVariant &v)
-{
-  bool ok=false;
-  double freq=v.toDouble(&ok);
-  if((!ok)||(freq==0.0)) {
-    return QString("\"[none]\",");
-  }
-  if(freq<108.1) {
-    return QString().sprintf("\"%5.1lf MHz\",",freq);
-  }
-  return QString().sprintf("\"%4.0f kHz\",",freq);
-}
-
-
-QString ListReports::TypeField(const QVariant &v)
-{
-  if(v.isNull()) {
-    return QString("[none]");
-  }
-  if(v.toString().lower()=="a") {
-    return QString("\"AM\",");
-  }
-  if(v.toString().lower()=="f") {
-    return QString("\"FM\",");
-  }
-  if(v.toString().lower()=="i") {
-    return QString("\"Internet\",");
-  }
-  return QString("\"[none]\",");
-}
-
-
-QString ListReports::ContactFields(int affiliate_id,ContactType type,int fields)
-{
-  QString field;
-  QString sql;
-  QSqlQuery *q;
-  QString ret;
-
-  switch(type) {
-  case ListReports::ProgramDirectorContact:
-    field="PROGRAM_DIRECTOR";
-    break;
-
-  case ListReports::AffidavitContact:
-    field="AFFIDAVIT";
-    break;
-
-  case ListReports::GeneralManagerContact:
-    field="GENERAL_MANAGER";
-    break;
-  }
-  sql=QString().sprintf("select NAME,PHONE,FAX,EMAIL from CONTACTS \
-                         where (AFFILIATE_ID=%d)&&(%s=\"Y\")",
-			affiliate_id,(const char *)field);
-  q=new QSqlQuery(sql);
-  if(q->first()) {
-    if((fields&FieldName)!=0) {
-      ret+=StringField(q->value(0).toString());
-    }
-    if((fields&FieldPhone)!=0) {
-      ret+=PhoneField(q->value(1).toString());
-    }
-    if((fields&FieldFax)!=0) {
-      ret+=PhoneField(q->value(2).toString());
-    }
-    if((fields&FieldEmail)!=0) {
-      ret+=StringField(q->value(3).toString());
-    }
-  }
-  else {
-    if((fields&FieldName)!=0) {
-      ret+=StringField("");
-    }
-    if((fields&FieldPhone)!=0) {
-      ret+=StringField("");
-    }
-    if((fields&FieldFax)!=0) {
-      ret+=StringField("");
-    }
-    if((fields&FieldEmail)!=0) {
-      ret+=StringField("");
-    }
-  }
-  delete q;
-
-  return ret;
 }
 
 
@@ -640,7 +389,6 @@ void ListReports::ContactFields(int affiliate_id,ContactType type,int fields,
     if((fields&FieldName)!=0) {
       tab->addCell(colnum,rownum);
       colnum++;
-      ret+=StringField("");
     }
     if((fields&FieldPhone)!=0) {
       tab->addCell(colnum,rownum);
@@ -656,10 +404,4 @@ void ListReports::ContactFields(int affiliate_id,ContactType type,int fields,
     }
   }
   delete q;
-}
-
-
-QString ListReports::EmptyField()
-{
-  return QString("\"\",");
 }
